# magedeck

./: Cargo.toml
migrations/: 20240521190825_create_schema.sql
src/: card.rs  loader.rs  main.rs  store.rs  utils.rs
src/cli/: commands.rs  mod.rs
